# ria

./: Cargo.toml  README.md
chapter-1/buffer-overflow/: Cargo.toml
chapter-1/buffer-overflow/src/: main.rs
chapter-1/dangling-pointer/: Cargo.toml  README.md
chapter-1/dangling-pointer/src/: main.rs
chapter-1/data-race/src/: main.rs
chapter-1/iterator-modification/: Cargo.toml
chapter-1/iterator-modification/src/: main.rs
chapter-1/penguin/: Cargo.toml
chapter-1/penguin/src/: main.rs
chapter-2/array-vector/: Cargo.toml
chapter-2/array-vector/src/: main.rs
chapter-2/compile/: Cargo.toml  main
chapter-2/generic/src/: main.rs
chapter-2/grep-lite/: Cargo.toml
chapter-2/grep-lite/src/: main.rs
chapter-2/increment/: Cargo.toml
chapter-2/increment/src/: main.rs
chapter-2/integer-add/: Cargo.toml
chapter-2/integer-add/src/: main.rs
chapter-2/lifetime/src/: main.rs
chapter-2/mandelbrot/src/: main.rs
chapter-2/pattern-match/: Cargo.toml
chapter-2/pattern-match/src/: main.rs
