[workspace]

members = [
    "ch6/ch6-particles",
    "ch7/ch7-serde-eg",
    "ch7/ch7-fview",
    "ch7/ch7-actionkv1",
    "ch7/ch7-actionkv",
    "chp8/chp8-rpg",
    "chp8/ch8-stdlib",
    "chp8/ch8-resolve",
    "chp8/ch8-misc",
    "chp8/ch8-mac",
    "chp8/ch8-mget",
    "ch9/ch9-clock1",
    "ch9/ch9-clock2",
    "ch9/ch9-clock3",
    "ch10/ch10-render-hex",
    "ch10/ch10-render-hex-functional",
    "ch10/ch10-render-hex-parallel-iterator",
    "ch10/ch10-channels-intro",
    "ch10/ch10-channels-complex",
    "ch10/ch10-render-hex-threadpool",
    "ch12/ch12-sixty",
    "ch12/ch12-basic-handler",
    "ch12/ch12-fn-ptr-demo-2",
    "ch12/ch12-sjlj",
    "chapter-1/hello"
, "chapter-1/penguin", "chapter-1/dangling-pointer", "chapter-1/data-race", "chapter-1/buffer-overflow", "chapter-1/iterator-modification", "chapter-2/compile", "chapter-2/integer-add", "chapter-2/increment", "chapter-2/pattern-match", "chapter-2/mandelbrot", "chapter-2/lifetime", "chapter-2/generic", "chapter-2/grep-lite", "chapter-2/array-vector"]
